# rstorrent

./: .gitattributes  .gitignore  .prettierignore  Cargo.toml  README.md  backlog.md  demo.html  eslint.config.js  package-lock.json  package.json  plan.md  tasks.md  vite.web.config.ts  vitest.config.ts  web.html
.claude/worktrees/: agent-aea4898e592b53307
.claude/worktrees/agent-a087f8fc74393430d/: README.md  index.html  package.json
.claude/worktrees/agent-a087f8fc74393430d/src/: App.tsx  actions.ts  main.tsx
.claude/worktrees/agent-a087f8fc74393430d/src-tauri/src/: log.rs  torrent_file.rs  watcher.rs
.claude/worktrees/agent-a087f8fc74393430d/src-tauri/src/rtorrent/: mock.rs  scgi.rs
.claude/worktrees/agent-a087f8fc74393430d/src/components/details/: DetailTabs.tsx  SpeedChart.tsx
.claude/worktrees/agent-a087f8fc74393430d/src/components/dialogs/: AddTorrentDialog.module.css  DialogHost.tsx  RemoveDialog.module.css  forms.module.css
.claude/worktrees/agent-a087f8fc74393430d/src/components/table/: Row.tsx  TorrentTable.module.css
.claude/worktrees/agent-a087f8fc74393430d/src/hooks/: useKeyboard.ts
.claude/worktrees/agent-a087f8fc74393430d/src/store/: settings.ts
.claude/worktrees/agent-a087f8fc74393430d/src/utils/: filetree.test.ts
.claude/worktrees/agent-a37a15780d4f88301/: plan.md
.claude/worktrees/agent-a37a15780d4f88301/design/: rTorrent Client 1c.dc.html  rTorrent Client.dc.html
.claude/worktrees/agent-a37a15780d4f88301/src-tauri/capabilities/: default.json
.claude/worktrees/agent-a37a15780d4f88301/src-tauri/src/: commands.rs  settings.rs  state.rs  stats.rs
.claude/worktrees/agent-a37a15780d4f88301/src-tauri/src/rtorrent/: derive.rs
.claude/worktrees/agent-a37a15780d4f88301/src/components/details/: DetailTabs.module.css
.claude/worktrees/agent-a37a15780d4f88301/src/components/dialogs/: AddTorrentDialog.tsx  ModalBase.tsx  PreferencesDialog.module.css  StatisticsDialog.tsx
.claude/worktrees/agent-a37a15780d4f88301/src/components/icons/: index.tsx
.claude/worktrees/agent-a37a15780d4f88301/src/components/shell/: StatusBar.module.css  TitleBar.tsx
.claude/worktrees/agent-a37a15780d4f88301/src/components/table/: TorrentTable.module.css  columns.test.ts
.claude/worktrees/agent-a37a15780d4f88301/src/hooks/: useKeyboard.ts
.claude/worktrees/agent-a37a15780d4f88301/src/store/: detail.ts  selectors.ts  ui.ts
.claude/worktrees/agent-a37a15780d4f88301/src/utils/: format.ts
.claude/worktrees/agent-a80ac4a3ca248d3ba/: eslint.config.js  package-lock.json  vitest.config.ts
.claude/worktrees/agent-a80ac4a3ca248d3ba/docs/: release.md  rtorrent-setup.md
.claude/worktrees/agent-a80ac4a3ca248d3ba/src-tauri/src/: ipc.rs  menu.rs
.claude/worktrees/agent-a80ac4a3ca248d3ba/src-tauri/src/rtorrent/: client.rs
.claude/worktrees/agent-a80ac4a3ca248d3ba/src/components/dialogs/: AddMagnetDialog.tsx  Checkbox.tsx  ModalBase.module.css  PreferencesDialog.tsx  RemoveDialog.tsx
.claude/worktrees/agent-a80ac4a3ca248d3ba/src/components/shell/: TitleBar.module.css  Toolbar.module.css  Toolbar.tsx
.claude/worktrees/agent-a80ac4a3ca248d3ba/src/components/table/: ProgressBar.module.css  ProgressBar.tsx
.claude/worktrees/agent-a80ac4a3ca248d3ba/src/ipc/: events.ts
.claude/worktrees/agent-a80ac4a3ca248d3ba/src/store/: ui.ts
.github/workflows/: ci.yml  release.yml
crates/rtorrent/: Cargo.toml
crates/rtorrent/src/: lib.rs  secrets.rs  snapshot.rs  torrent_file.rs  types.rs
crates/rtorrent/src/rtorrent/: client.rs  derive.rs  http.rs  mock.rs  mod.rs  scgi.rs  transport.rs  xmlrpc.rs
design/: README.md  plan.md  rTorrent Web UI.dc.html  tasks.md
docs/: qa-checklist.md  rtorrent-setup.md  web-setup.md  wsl-setup.md
docs/images/: README.md
server/: Cargo.toml
server/src/: api.rs  assets.rs  auth.rs  cmd.rs  config.rs  disk.rs  main.rs  poller.rs  state.rs
src/: App.module.css  App.tsx  actions.ts  addQueue.ts  externalOpen.test.ts  externalOpen.ts  main.tsx  platform.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  hooks.rs  ipc.rs  lib.rs  localfs.rs  log.rs  main.rs  menu.rs  network_prefs.rs  notifications.rs  open_requests.rs  poller.rs  rss.rs  rtorrent_rc.rs  secrets.rs  settings.rs  state.rs  stats.rs  throttles.rs  torrent_file.rs  turtle.rs  watcher.rs  wsl.rs  xmlrpc_console.rs
src-tauri/src/rtorrent/: client.rs  derive.rs  http.rs  mock.rs  mod.rs  scgi.rs  transport.rs
src/components/details/: AvailabilityBar.module.css  AvailabilityBar.tsx  DetailTabs.module.css  DetailTabs.tsx  PieceBar.module.css  PieceBar.tsx
src/components/dialogs/: AddMagnetDialog.tsx  AddTorrentDialog.tsx  DialogHost.tsx  PreferencesDialog.module.css  PreferencesDialog.tsx  RateLimitDialog.tsx  ShutdownDialog.tsx  StatisticsDialog.tsx  TuneNetworkDialog.tsx  XmlRpcConsoleDialog.module.css  XmlRpcConsoleDialog.tsx
src/components/icons/: index.tsx
src/components/menu/: ColumnMenu.tsx  ContextMenu.module.css  ContextMenu.tsx
src/components/shell/: SelectionBar.module.css  SelectionBar.tsx  StatusBar.tsx  TitleBar.module.css  Toolbar.tsx
src/components/sidebar/: FilterSidebar.module.css  FilterSidebar.tsx
src/components/table/: Row.tsx  TorrentTable.module.css  TorrentTable.tsx  columns.test.ts  columns.ts
src/demo/: fixtures.ts  main.tsx
src/hooks/: useDragDrop.ts  useKeyboard.ts  usePasteToAdd.ts
src/ipc/: backend.ts  commands.ts  events.ts  tauri.ts  types.ts  web.test.ts  web.ts  webSettings.ts
src/store/: log.ts  rateHistory.ts  selectors.test.ts  selectors.ts  settings.test.ts  settings.ts  torrents.ts  ui.test.ts  ui.ts
src/test/: setup.ts
src/theme/: global.css  tokens.css  tokens.web.css
src/utils/: bitfield.test.ts  bitfield.ts  dom.test.ts  dom.ts  filetree.ts  format.test.ts  format.ts
src/web/: ActionStrip.tsx  AppBar.tsx  DiskCard.tsx  Footer.tsx  LoginScreen.tsx  StatusDialog.tsx  WebApp.test.tsx  WebApp.tsx  main.tsx  statusText.test.ts  statusText.ts
tools/: scgi-http-bridge.py  wsl-setup-rtorrent.sh
