[package]
name = "rstorrent"
version = "0.1.0"
description = "Native macOS desktop client for the rtorrent daemon"
authors = ["rstorrent"]
edition = "2021"
rust-version = "1.77"

[lib]
# The `_lib` suffix keeps the library name distinct from the binary target so
# they don't collide on Windows (see rust-lang/cargo#8519). `main.rs` calls
# `rstorrent_lib::run()`.
name = "rstorrent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri shell + plugins ---
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"            # open paths / URLs
tauri-plugin-dialog = "2"            # native file/folder pickers
tauri-plugin-clipboard-manager = "2" # copy magnet links
tauri-plugin-window-state = "2"      # remember window size/position (E13-S3)

# --- Serialization (IPC + settings) ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Async runtime for SCGI I/O and the polling loop ---
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }

# --- rtorrent protocol plumbing ---
quick-xml = "0.37"    # minimal hand-rolled XML-RPC encode/parse (handles <i8>)
base64 = "0.22"       # load.raw payloads
lava_torrent = "0.11" # .torrent metadata parsing for the Add dialog
# XML-RPC over HTTP(S) for remote daemons (B9). Already in the tree via Tauri,
# but without TLS; native-tls uses macOS Security.framework and therefore the
# system trust store, rather than bundling a CA list that can go stale.
reqwest = { version = "0.13", default-features = false, features = ["native-tls"] }
# Remote credentials belong in the Keychain, never in settings.json (B9).
keyring = { version = "3", features = ["apple-native"] }

# --- Filesystem side-effects ---
trash = "5"           # "delete data" moves files to the macOS Trash, never rm
notify = "7"          # watched-folder auto-add (E11-S5)

# --- Errors ---
thiserror = "2"       # typed error enums across the rtorrent layer
async-trait = "0.1"   # dyn-compatible async RtorrentApi trait (Scgi vs Mock)

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-deep-link = "2"         # magnet: scheme handling through LaunchServices
# Native notifications with a click response. The official Tauri notification
# plugin only exposes notification actions on mobile, so it cannot implement
# B2's click-to-select behavior on macOS.
mac-notification-sys = "=0.6.8"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "test-util"] }

[profile.release]
# Smaller, faster release binaries for the packaged .app.
codegen-units = 1
lto = true
opt-level = "s"
strip = true
