[package]
name = "rstorrent"
version = "0.1.0"
description = "Native desktop client for the rtorrent daemon"
authors = ["rstorrent"]
edition = "2021"
rust-version = "1.77"

[lib]
# The `_lib` suffix keeps the library name distinct from the binary target so
# they don't collide on Windows (see rust-lang/cargo#8519). `main.rs` calls
# `rstorrent_lib::run()`.
name = "rstorrent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- The host-agnostic rtorrent client layer (SCGI/HTTP, XML-RPC, DTOs, mock,
# .torrent parsing, keychain). Shared with the `rstorrent-web` server. ---
rtorrent-core = { path = "../crates/rtorrent" }

# --- Tauri shell + plugins ---
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"            # open paths / URLs
tauri-plugin-dialog = "2"            # native file/folder pickers
tauri-plugin-clipboard-manager = "2" # copy magnet links
tauri-plugin-window-state = "2"      # remember window size/position (E13-S3)

# --- Serialization (IPC + settings) ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Async runtime for the polling loop and app tasks ---
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }

# --- RSS feed fetch + parse (B11). The rtorrent protocol plumbing that used to
# pull these in now lives in rtorrent-core; rss.rs still needs them directly. ---
quick-xml = "0.37"
reqwest = { version = "0.13", default-features = false, features = ["native-tls"] }

# --- Filesystem side-effects ---
trash = "5"           # "delete data" moves files to Trash/Recycle Bin, never rm
notify = "7"          # watched-folder auto-add (E11-S5)

# --- Time ---
# Local wall-clock (weekday + time-of-day) for the turtle-mode schedule (B14).
# `clock` pulls the platform's local-timezone offset; already in the tree.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-deep-link = "2"         # magnet: scheme handling through LaunchServices
# Native notifications with a click response. The official Tauri notification
# plugin only exposes notification actions on mobile, so it cannot implement
# B2's click-to-select behavior on macOS.
mac-notification-sys = "=0.6.8"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-deep-link = "2"         # magnet: scheme, registered by the NSIS installer
# Windows delivers file/magnet opens as argv to a *second* process instance, so
# the deep-link plugin needs single-instance to forward them to the live window.
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
# Toast notifications with an activation callback — the same crate the official
# notification plugin uses internally, but reached directly so B2's
# click-to-select behavior survives on Windows.
tauri-winrt-notification = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "test-util"] }

# NOTE: `[profile.release]` lives in the workspace-root Cargo.toml — a member
# crate's own profile section is ignored in a workspace.
